--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 node_modules
 test/_build
 npm-debug.log
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+*.iml
+.idea/
