--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A super tiny flat file compiler.",
   "main": "index.js",
   "scripts": {
-    "test": "cd test && gulp"
+    "test": "cd test && gulp test"
   },
   "author": "Geoff Kimball <geoff@zurb.com>",
   "license": "MIT",
@@ -16,6 +16,11 @@
     "through2": "^0.6.5"
   },
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "del": "^2.0.1",
+    "gulp": "^3.8.11",
+    "gulp-mocha": "^2.1.3",
+    "gulp-wait": "0.0.2",
+    "html-minifier": "^0.7.2",
+    "run-sequence": "^1.1.4"
   }
 }
