--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "panini",
-  "version": "0.1.1",
+  "version": "1.0.0-rc.1",
   "description": "A super tiny flat file compiler.",
   "main": "index.js",
   "scripts": {
