--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A super tiny flat file compiler.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --compilers js:babel-register"
   },
   "author": "Geoff Kimball <geoff@zurb.com>",
   "license": "MIT",
@@ -18,8 +18,14 @@
     "through2": "^0.6.5"
   },
   "devDependencies": {
+    "assert-dir-equal": "^1.0.1",
+    "babel": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
     "gulp": "^3.8.11",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "vinyl-fs": "^2.2.1"
   },
   "repository": {
     "type": "git",
