--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "coveralls": "^2.11.6",
     "gulp": "^3.8.11",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "vinyl-fs": "^2.2.1"
   },
   "repository": {
