--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "front-matter": "^2.0.5",
     "glob": "^6.0.4",
+    "deepmerge": "^0.2.10",
     "handlebars": "^3.0.0",
     "highlight.js": "^8.9.1",
     "js-yaml": "^3.5.2",
