--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "Geoff Kimball <geoff@zurb.com>",
   "license": "MIT",
   "dependencies": {
+    "deepmerge": "^0.2.10",
     "front-matter": "^2.0.5",
     "glob": "^6.0.4",
-    "deepmerge": "^0.2.10",
     "handlebars": "^3.0.0",
     "highlight.js": "^8.9.1",
     "js-yaml": "^3.5.2",
     "marked": "^0.3.5",
+    "minimatch": "^3.0.0",
     "through2": "^2.0.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "babel-runtime": "^6.3.19",
     "coveralls": "^2.11.6",
     "gulp": "^3.8.11",
+    "gulp-markdown": "^1.2.0",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "^1.0.0",
     "vinyl-fs": "^2.3.1"
