--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "panini",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A super tiny flat file compiler.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register --reporter nyan"
   },
-  "author": "Geoff Kimball <geoff@zurb.com>",
+  "author": "ZURB <foundation@zurb.com> (http://zurb.com)",
   "license": "MIT",
+  "bin": {
+    "panini": "./bin/panini.js"
+  },
   "dependencies": {
     "deepmerge": "^0.2.10",
     "front-matter": "^2.0.5",
@@ -16,7 +19,9 @@
     "highlight.js": "^8.9.1",
     "js-yaml": "^3.5.2",
     "marked": "^0.3.5",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "nopt": "^3.0.6",
+    "vinyl-fs": "^2.4.4"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
