Fix {{ root }} variable having Windows path separators, closes #64

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^3.5.2",
     "marked": "^0.3.6",
     "nopt": "^4.0.1",
+    "slash": "^1.0.0",
     "through2": "^2.0.0",
     "vinyl-fs": "^2.4.4"
   },
