--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "deepmerge": "^1.3.2",
+    "flexiconfig": "^2.0.0",
     "front-matter": "^2.0.5",
     "glob": "^7.0.0",
     "handlebars": "^4.0.5",
     "highlight.js": "^8.9.1",
     "js-yaml": "^3.5.2",
+    "lodash.assign": "^4.2.0",
     "marked": "^0.3.6",
     "nopt": "^4.0.1",
     "slash": "^1.0.0",
