Parse all page data before rendering pages. This sets up the ability to have pages be aware of each other data-wise

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nopt": "^4.0.1",
     "slash": "^1.0.0",
     "through2": "^2.0.0",
+    "vinyl": "^2.0.1",
     "vinyl-fs": "^2.4.4"
   },
   "devDependencies": {
