--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "glob": "^7.0.0",
     "handlebars": "^4.0.5",
     "highlight.js": "^8.9.1",
-    "js-yaml": "^3.5.2",
+    "load-whatever": "^0.2.0",
     "lodash.assign": "^4.2.0",
     "marked": "^0.3.6",
     "nopt": "^4.0.1",
