--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
     "babel-runtime": "^6.3.19",
+    "chai": "^3.5.0",
+    "chai-stream-es6": "0.0.2",
     "coveralls": "^2.11.6",
     "gulp": "^3.8.11",
     "mocha": "^3.2.0",
