Start on making Handlebars loaders async

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "highlight.js": "^8.9.1",
     "load-whatever": "^0.2.0",
     "lodash.assign": "^4.2.0",
+    "lodash.frompairs": "^4.0.1",
     "marked": "^0.3.6",
     "nopt": "^4.0.1",
+    "pify": "^2.3.0",
     "slash": "^1.0.0",
     "through2": "^2.0.0",
     "vinyl": "^2.0.1",
