--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flexiconfig": "^2.0.0",
     "front-matter": "^2.0.5",
     "glob": "^7.0.0",
+    "glob-watcher": "^3.1.0",
     "handlebars": "^4.0.5",
     "highlight.js": "^8.9.1",
     "load-whatever": "^0.2.0",
