--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash.frompairs": "^4.0.1",
     "marked": "^0.3.6",
     "meow": "^3.7.0",
+    "ora": "^1.1.0",
     "pify": "^2.3.0",
     "slash": "^1.0.0",
     "through2": "^2.0.0",
