Drop Node 0.12 support

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
   "bugs": {
     "url": "https://github.com/zurb/panini/issues"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "xo": {
     "space": true,
     "rules": {
