Change extension to .html when rendering

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "meow": "^3.7.0",
     "ora": "^1.1.0",
     "pify": "^2.3.0",
+    "replace-ext": "^1.0.0",
     "slash": "^1.0.0",
     "through2": "^2.0.0",
     "vinyl": "^2.0.1",
