Load handlebars-helpers library for Handlebars, and template-helpers for other engines

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^7.0.0",
     "glob-watcher": "^3.1.0",
     "handlebars": "^4.0.5",
+    "handlebars-helpers": "^0.8.2",
     "highlight.js": "^8.9.1",
     "load-whatever": "^0.2.0",
     "lodash.assign": "^4.2.0",
