--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked": "^0.3.6",
     "meow": "^3.7.0",
     "ora": "^1.1.0",
+    "path-prefix": "^1.0.0",
     "pify": "^2.3.0",
     "replace-ext": "^1.0.0",
     "slash": "^1.0.0",
