--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "panini": "./bin/panini.js"
   },
   "dependencies": {
+    "chokidar": "^1.6.1",
     "deepmerge": "^1.3.2",
     "extract-stack": "^1.0.0",
     "flexiconfig": "^2.0.0",
@@ -46,11 +47,15 @@
     "chai": "^3.5.0",
     "chai-stream-es6": "0.0.2",
     "coveralls": "^2.11.6",
+    "del": "^2.2.2",
     "gulp": "^3.8.11",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.0.0",
     "pug": "^2.0.0-beta11",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
     "snap-shot": "^2.17.0",
+    "tempy": "^0.1.0",
     "vinyl-fs": "^2.3.1",
     "xo": "^0.18.1"
   },
