--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "panini": "./bin/panini.js"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "chokidar": "^1.6.1",
     "deepmerge": "^1.3.2",
     "extract-stack": "^1.0.0",
