Add localization support #45

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "chalk": "^1.1.3",
     "chokidar": "^1.6.1",
     "deepmerge": "^1.3.2",
+    "dot-prop": "^4.1.1",
     "extract-stack": "^1.0.0",
     "flexiconfig": "^2.0.0",
+    "folder-to-object": "^1.0.0",
     "front-matter": "^2.0.5",
     "glob": "^7.0.0",
     "glob-watcher": "^3.1.0",
@@ -29,6 +31,7 @@
     "marked": "^0.3.6",
     "meow": "^3.7.0",
     "ora": "^1.1.0",
+    "path-insert": "^1.0.0",
     "path-prefix": "^1.0.0",
     "pify": "^2.3.0",
     "replace-ext": "^1.0.0",
