Add file transform functionality, closes #48

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "coveralls": "^2.11.6",
     "del": "^2.2.2",
     "gulp": "^3.8.11",
+    "gulp-markdown": "^1.2.0",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.0.0",
     "pug": "^2.0.0-beta11",
