Implement collections feature, which allows a developer to write functions to generate pages on the fly

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.frompairs": "^4.0.1",
     "marked": "^0.3.6",
     "meow": "^3.7.0",
+    "merge-stream": "^1.0.1",
     "ora": "^1.1.0",
     "path-insert": "^1.0.0",
     "path-prefix": "^1.0.0",
