--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "lodash.frompairs": "^4.0.1",
     "marked": "^0.3.6",
     "meow": "^3.7.0",
-    "merge-stream": "^1.0.1",
     "ora": "^1.1.0",
     "path-insert": "^1.0.0",
     "path-prefix": "^1.0.0",
@@ -53,6 +52,7 @@
     "chai-stream-es6": "0.0.2",
     "coveralls": "^2.11.6",
     "del": "^2.2.2",
+    "ejs": "^2.5.6",
     "gulp": "^3.8.11",
     "gulp-markdown": "^1.2.0",
     "mocha": "^3.2.0",
