Don't re-read files when stripping BOM, fixes #132

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "marked": "^0.3.6",
     "nopt": "^4.0.1",
     "slash": "^1.0.0",
+    "strip-bom": "2.0.0",
     "through2": "^2.0.0",
     "vinyl-fs": "^2.4.4"
   },
