Add post-render transforms

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ejs": "^2.5.6",
     "gulp": "^3.8.11",
     "gulp-markdown": "^1.2.0",
+    "gulp-striphtml": "0.0.1",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.0.0",
     "pug": "^2.0.0-beta11",
