--- a/package.json
+++ b/package.json
@@ -34,25 +34,22 @@
     "ora": "^1.1.0",
     "path-insert": "^1.0.0",
     "path-prefix": "^1.0.0",
-    "pify": "^2.3.0",
+    "pify": "^3.0.0",
     "replace-ext": "^1.0.0",
     "slash": "^1.0.0",
     "strip-bom": "^3.0.0",
     "template-helpers": "^0.6.7",
     "through2": "^2.0.0",
     "try-require": "^1.2.1",
-    "vinyl": "^2.0.1",
-    "vinyl-fs": "^2.4.4"
+    "vinyl": "^2.0.1"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "babel": "^6.3.26",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "babel-runtime": "^6.3.19",
     "chai": "^3.5.0",
     "chai-stream-es6": "0.0.2",
-    "coveralls": "^2.11.6",
     "del": "^2.2.2",
     "ejs": "^2.5.6",
     "gulp": "^3.8.11",
@@ -65,6 +62,7 @@
     "sinon-chai": "^2.9.0",
     "snap-shot": "^2.17.0",
     "tempy": "^0.1.0",
+    "vinyl-fs": "^3.0.2",
     "xo": "^0.18.1"
   },
   "repository": {
